k8s-ingress/frontend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      labels:
        app: qbox
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: techdays.azurecr.io/qboxcoreapi:2.1.102
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: qbox
spec:
  selector:
    app: qbox
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
