k8s-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress  
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:  
  rules:
  - http:
      paths:
      - path: /coolapi/?(.*)
        backend:
          serviceName: api
          servicePort: 80      
      - path: /?(.*)
        backend:
          serviceName: frontend
          servicePort: 80
